hphp/hack/test/typecheck/const_attribute/class_const_attribute.php.exp
File "class_const_attribute.php", line 4, characters 7-7:
Cannot use experimental feature: The __Const attribute is not supported. (Other[0000])
File "class_const_attribute.php", line 17, characters 12-26:
Cannot assign to a __Const property (Typing[4196])
